scrollbar issue fixed

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -49,7 +49,6 @@ body {
   -webkit-overflow-scrolling: touch;
 
   &::-webkit-scrollbar {
-    display:none;
     width: $size-xs;
     height: $size-xs;
 
